# cookiecutter-python

./: .envrc  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .taplo.toml  .yamlfmt.yml  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  renovate.json  {{cookiecutter.project_slug}}
.github/: dependabot.yml
.github/workflows/: ci.yml  constraints.txt
hooks/: post_gen_project.py
new_project_root/: .gitignore  .mdformat.toml  .pre-commit-config.yaml  .readthedocs.yml  .taplo.toml  Makefile  README.md  Readme.org  cliff.toml  pyproject.toml  renovate.json
new_project_root/.github/workflows/: ci.yml  cruft-update.yml  lockfile-update.yml  release.yml
new_project_root/analyses/: {{cookiecutter.date}}.ipynb
new_project_root/docs/: conf.py
new_project_root/docs/api/: api.rst
new_project_root/docs/references/: contributing.rst  development.rst  {{cookiecutter.project_slug}}.rst
new_project_root/src/{{cookiecutter.project_slug}}/: types.py  {{cookiecutter.project_slug}}.py
new_project_root/tests/: test_cli.py
tests/: __init__.py  test_cookiecutter.py
{{cookiecutter.project_slug}}/: .codespellrc  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  LICENSE.txt  README.md  Readme.org  project.toml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  docs.yml
{{cookiecutter.project_slug}}/analyses/: {{cookiecutter.date}}.ipynb
{{cookiecutter.project_slug}}/docs/: 20240101.ipynb  click.rst  conf.py  index.rst  index4data.rst
{{cookiecutter.project_slug}}/docs/api/: {{cookiecutter.project_slug}}.rst
{{cookiecutter.project_slug}}/docs/references/: description.rst  development.rst  {{cookiecutter.project_slug}}.rst
{{cookiecutter.project_slug}}/docs/tutorials/: tutorial.ipynb  tutorials.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  types.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_cli.py
