[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = '{{ cookiecutter.author_name }}', email = '{{ cookiecutter.email }}' }]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Unix Shell",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha",
]
dependencies = [
  "click>=8.3.1",
]
description = "{{ cookiecutter.project_short_description }}"
keywords = ["ADD_FIRST", "ADD_SECOND"]
license = "BSD-3-Clause"
name = "{{ cookiecutter.project_slug }}"
# README_MD
requires-python = ">=3.11"
version = "{{ cookiecutter.version }}"

[project.optional-dependencies]
docs = [
  "autodocsumm>=0.2.14",
  "ipykernel>=7.1.0",
  "jupyter>=1.1.1",
  "nbsphinx>=0.9.8",
  "pydata-sphinx-theme>=0.16.1",
  "pygments>=2.19.2",
  "sphinx-autodoc-typehints>=3.0.1,<3.2; python_version < '3.14'", # TODO: wait nbsphinx
  "sphinx-click>=6.2.0",
  "sphinx>=8.1.3,<8.2; python_version < '3.14'", # TODO: wait nbsphinx
  "sphinxcontrib-plantuml>=0.31",
]

[dependency-groups]
dev = [
  "git-cliff>=2.10.1",
  "mdformat>=1.0.0",
  "mdformat-gfm>=1.0.0",
  "pylsp-mypy>=0.7.0",
  "ruff>=0.14.8",
  "python-lsp-ruff>=2.3.0",
  "cruft>=2.16.0",
]
lint = [
  "pre-commit==4.5.0",
]
tests = [
  "coverage[toml]>=7.13.0",
  "mypy>=1.19.0",
  "pandas-stubs>=2.3.3.251201",
  "pygments>=2.19.2", # color xdoctest
  "pytest>=9.0.2",
  "scipy-stubs>=1.16.3.3",
  "types-click >= 7.1.8",
  "types-setuptools>=80.9.0.20250822",
  "xdoctest>=1.3.0",
]

[project.scripts]
"{{ cookiecutter.project_name | lower }}" = "{{ cookiecutter.project_name | lower }}.__main__:{{ cookiecutter.project_name | lower }}"

# PROJECT_URLS

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
# fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
omit = ["*__init__.py", "types.py"]
source = ["{{ cookiecutter.project_slug }}"]

[tool.isort]
combine_as_imports = true
force_single_line = false
include_trailing_comma = true
known_first_party = "{{ cookiecutter.project_slug }}"
line_length = 88 # to match black's default line length
multi_line_output = 3
profile = "black"

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
# exclude = ""
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_configs = true

# TODO: check
[tool.pydoclint]
check-class-attributes = false

[tool.pylsp-mypy]
dmypy = false
enabled = true
live_mode = true
strict = true

[tool.ruff]
extend-exclude = ["scripts/"]
extend-include = ["*.ipynb"]
fix = true
force-exclude = true
line-length = 88
target-version = "py311"
unsafe-fixes = true
# Enable preview mode
preview = false

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["ISC001"]
select = [
  "A", # builtins
  "AIR", # airflow
  "ANN", # typing annotation
  "ARG", # unused arguments
  "ASYNC",
  "B", # bugbear
  "BLE", # blind-except
  "C",
  "C4", # comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DOC",
  "DTZ", # dates
  "E", # pycodestyle
  "EM", # exceptions
  "ERA", # eradicate
  "EXE",
  "F", # pyflakes
  "FA", # future annotations
  "FBT", # boolean-trap
  "FLY", # flyntp
  "FURB", # refurbishing and modernizing
  "G", # logging
  "I", # isort
  "ICN", # import conventions (opinionated)
  "INP", #inplict namespace
  "INT", #gettext
  "ISC", # implicit-str-concat
  "LOG", # logging
  "N", # pep8-naming
  "NPY",
  "PD", # pandas-vet
  "PERF", # pperformance anti pattern
  "PGH", # pygrep WAIT
  "PIE",
  "PL", # pylint see PLR2004...
  "PT", # pytest-style
  "PTH", # use-pathlib
  "PYI", #lint typeshed
  "Q", # quotes
  "RET", # Return
  "RSE", # Raise
  "RUF", # Ruff
  "S", # bandit
  "SIM", # simplify
  "SLF", # private self
  "SLOT", # __slot__
  "T10", # debugger
  "T20", # print
  "TC", # TYPE_CHECKING
  "TCH", # TYPE_CHECKING
  "TID", # tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
  "YTT", # 2020
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["{{ cookiecutter.project_slug }}"]
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["I002"] # don't need annotations
"docs/*" = ["INP"]
"*.ipynb" = ["ERA", "T20"]
"tests/*" = ["PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.typos]

[tool.typos.default]
extend-ignore-re = [
  "\"id\":\\s*\"[^\"]+\"", # Ignore specific patterns such as "id": "XXXX" in JSON
  "\"metadata\":\\s*\\{[^}]*\\}", # Ignore all metadata fields inside .ipynb cells
]


[tool.typos.default.extend-words]
ND = "ND"
Nd = "Nd"
OME = "OME"
arange = "arange"
arosio = "Arosio"
thr = "thr"
