[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.12.2"]

[project]
authors = [
  {name = '{{ cookiecutter.author_name }}', email = '{{ cookiecutter.email }}'}
]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Unix Shell",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Development Status :: 3 - Alpha"
]
dependencies = [
  'click < 8.1.7',
]
description = "{{ cookiecutter.project_short_description }}"
keywords = ["ADD_FIRST", "ADD_SECOND"]
license = "BSD-3-Clause"
license-files = {paths = ["LICENSE.txt"]}
name = "{{ cookiecutter.project_slug }}",
readme = "README.md"
requires-python = ">=3.9, <3.12"
version = "{{ cookiecutter.version }}"
